--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                         </div>
                         <div class="phone right-content">
                             <i class="fas fa-phone"></i>
-                            <div>
+                            <div style="  width: 100%;">
                                 <p>+51 904 914 661</p>
                                 <p>+51 958 738 822</p>
                             </div>
