--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#descripcion"><li>Inicio</li></a>
                 <a href="#mi_servicios"><li>Servicios</li></a>
                 <a href="#certificados"><li>Certificados</li></a>
-                <a href="#contactanos"><li>Contáctanos</li></a>
+                <a href="#contactanos"><li>Contacto</li></a>
             </ul>
             <div class="iconos-sociales">
                 <a href="https://wa.me/+51904914661" target="_blank"><i class="fab fa-whatsapp"></i></a>
